--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>reveal.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/night.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -24,18 +24,255 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown>
-					<script type="text/template">
-    <!-- .slide: data-background="#ff0000" -->
-        Markdown content
-    </script>
+
+				<section>
+					...
 				</section>
 
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section data-background-video="./videos/intro.mp4">
+				</section>
+
+				<section>
+					<h1>EL JAVASCRIPTO</h1>
+					<h3>Y el lado oscuro de la fuerza</h3>
+					<br>
+					<hr style="width:50%"/>
+					<p>
+						<h4 class="fragment"><small>Como aprender frontend y no morir en el intento</small></h4>
+						<small><a href="http://twitter.com/fforres">@fforres</a></small>
+					</p>
+				</section>
+
+
+				<section>
+					<h2>Autobombo</h2>
+					<div
+						style="
+							display: flex;
+							flex-direction: row;
+							justify-content: space-around;
+							align-items: center;
+						"
+						class="fragment"
+					>
+						<ul class="autobombo-list">
+							<li>
+								Felipe Torres
+							</li>
+							<li>
+								<a href="//twitter.com/fforres">twitter/@fforres</a>
+							</li>
+							<li>
+								Noders - JS Chile
+							</li>
+							<li>
+								I <span style="color:red;"> <3 </span> teach
+							</li>
+						</ul>
+						<img
+							src="images/fforres.jpg"
+							width="30%"
+							height="30%"
+							class="right"
+						>
+					</div>
+				</section>
+
+				<section>
+					<img src="./images/Groupon_Logo.png" alt=""
+						style="border:none; background: none;"
+					/>
+				</section>
+
+				<section>
+					<section>
+						<img src="./images/fforres_heart.jpg" alt="" />
+						<aside class="notes">
+							independiente que ahora esté en todos lados (Robots, backend, bases de datos, televisores, relojes).
+						</aside>
+					</section>
+
+					<section>
+						<h2>
+							Netscape - 10 Días
+						</h2>
+						<aside class="notes">
+							Tiene algunas cosas malas-
+							Javascript nacio como un lenguaje para navegadores.
+							Por lo que está fundamentalmente ligado a lo que es el desarrollo frontend.
+						</aside>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h2>
+							Front End Development
+						</h2>
+						<aside class="notes">
+							A mi me encanta el FrontEnd - Jquery, Hasta React.
+							Siento que con todo lo que hemos realizado con Noders y NodeSchool y ETC.
+						</aside>
+					</section>
+					<section data-background-image="./images/vader.jpg">
+						<h2>
+							Aprender Front End es terrible
+						</h2>
+						<span>(No tanto como vader)</span>
+					</section>
+
+					<section>
+						<h2>
+							Industria
+						</h2>
+						<p>
+							y
+						</p>
+						<h2>
+							Comunidad
+						</h2>
+						<aside class="notes">
+							Para entender Saber que quiere la industria hoy en dia
+						</aside>
+					</section>
+
+					<section>
+						<p>
+							Pega 1
+						</p>
+						<img src="./images/jobs/pega_1.png" alt="" />
+						<aside class="notes">
+							CakePHP, ruby on rails, django
+						</aside>
+					</section>
+
+					<section>
+						<p>
+							Pega 2
+						</p>
+						<img src="./images/jobs/pega_2.png" alt="" />
+						<aside class="notes">
+							Ruby on Rails / Node o DJango / Phonegap
+						</aside>
+					</section>
+
+					<section>
+						<p>
+							Pega 3 y 4
+						</p>
+						<img src="./images/jobs/pega_3.png" alt="" />
+						<img src="./images/jobs/pega_4.png" alt="" />
+						<aside class="notes">
+							PhotoShop / FireWorks
+							PHP MVC -  Mysql?
+							Que podemos sacar de conclusion?
+						</aside>
+					</section>
+
+					<section>
+						<h1>¯\_(ツ)_/¯</h1>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h1>Comunidades</h1>
+					</section>
+					<section data-background-image="./images/people.jpg">
+						<aside class="notes">
+							JavaScript es el mas popular
+							 - genera un colateral - fragementa la información -
+						</aside>
+					</section>
+
+					<section>
+						<img src="./images/standards.png" alt="" />
+					</section>
+					<section>
+						<h1>¯\_(ツ)_/¯</h1>
+						<aside class="notes">
+							Esto no es problea de la gente que contrata, o de los contratados. Es un problema de que somos muy nuevos. :)
+							Es un entorno muy cambiante. Nos vamos adaptando a modelos de negocios y requerimientos de la industria super raros.
+
+							Delimitar un area es complicado.
+							La comunidad tambien tiene la culpa - "somo muy efectivos" - "ReactJS, Angular 1, 2 o 3 la veganza de google"
+							Y si seguirle la pista estando al frente de las lineas es complicado. entrar de 0 es más complejo aun.
+						</aside>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>¿Cómo aprendemos frontend y sin morir en el intento?</h3>
+						<h3><small>Disclaimer**</small></h3>
+						<aside class="notes">
+							Groupon - Noders - NodeJS - NodeSchool - learncode - Bootcamps
+						</aside>
+					</section>
+					<section>
+						<p>
+							Groupon - <b><u> Noders </u></b> - NodeJS (Slack) - NodeSchool (Github) - JavaScript (Reddit) - learncode.academy - Bootcamps (CoderHouse / WorldTechMakers) - Platzi - CodeSchool - egghead.io - frontend masters - coursera - Experiencia y Meetups
+						</p>
+					</section>
+					<section>
+						<h1>Frontend 101</h1>
+					</section>
+					<section  data-background-image="./images/logos.jpg">
+					</section>
+					<section>
+						<h1>
+							jQuery
+							<span style="color:red" class="fragment">
+								<3
+							</span>
+						</h1>
+					</section>
+					<section>
+						<h3>Ya...y luego?</h3>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h1>FrontEnd 102</h1>
+					</section>
+					<!--
+						bit.ly/fe101
+
+						-	lo del framework .... meh :)
+							Testing
+						- packaging
+					-->
+				</section>
+
+				<section>
+					<section>
+						<h1>FrontEnd 103</h1>
+					</section>
+					<!--
+						Service Workers
+						Web Assembly
+						ES2015
+					-->
+				</section>
+
+				<section>
+					<section>
+						<h2>Tips</h2>
+					</section>
+					<section>
+						<h2>Humildah y Shispeza</h2>
+						<h2>Meetups</h2>
+					</section>
+				</section>
+
+				<section>
+					<h3>@fforres</h3>
+					<h3>http://fforr.es</h3>
+					<h3><small>Stickers de Noders</small></h3>
+				</section>
 			</div>
 		</div>
-
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
@@ -53,5 +290,6 @@
 				]
 			});
 		</script>
+		<script src="//localhost:35729/livereload.js"></script>
 	</body>
 </html>
