--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>EL JAVASCRIPTO Y el lado oscuro de la fuerza</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/night.css">
@@ -177,16 +177,17 @@
 				<section>
 					<section>
 						<h1>Comunidades</h1>
+						<aside class="notes">
+							Yo trabajo mucho con comunidades.
+							(Ojo enfocado en el frontend)
+							Las comunidades suelen ser "headless".
+						</aside>
 					</section>
 					<section data-background-image="./images/people.jpg">
 						<aside class="notes">
 							JavaScript es el mas popular
 							 - genera un colateral - fragementa la información -
 						</aside>
-					</section>
-
-					<section>
-						<img src="./images/standards.png" alt="" />
 					</section>
 					<section>
 						<h1>¯\_(ツ)_/¯</h1>
@@ -203,7 +204,7 @@
 
 				<section>
 					<section>
-						<h3>¿Cómo aprendemos frontend y sin morir en el intento?</h3>
+						<h3>¿Cómo aprendemos frontend sin morir en el intento?</h3>
 						<h3><small>Disclaimer**</small></h3>
 						<aside class="notes">
 							Groupon - Noders - NodeJS - NodeSchool - learncode - Bootcamps
@@ -215,7 +216,7 @@
 						</p>
 					</section>
 					<section>
-						<h1>Frontend 101</h1>
+						<h1>Frontend 101 </h1>
 					</section>
 					<section  data-background-image="./images/logos.jpg">
 					</section>
@@ -228,14 +229,34 @@
 						</h1>
 					</section>
 					<section>
-						<h3>Ya...y luego?</h3>
+						<h4>Eso</h4>
+						<img src="./gifs/thank_you.gif" alt="" class="fragment"/>
+					</section>
+					<section>
+						<h3></h3>
 					</section>
 				</section>
 
 				<section>
 					<section>
 						<h1>FrontEnd 102</h1>
+							<aside class="notes">
+								Realmente, que se necesita para aprender frontend?
+							</aside>
 					</section>
+					<section>
+						<h1><a href="//bit.ly/fe_" target="_blank">bit.ly/fe_</a></h1>
+						<aside class="notes">
+							Ver este gráfico mientras saco mi señalador
+						</aside>
+					</section>
+					<section>
+						<iframe src="https://coggle.it/diagram/V3TQxZ9U2BFq7c9L" style="width:100vw; height: 83vh"></iframe>
+					</section>
+					<section
+						data-background-image="./images/tool.jpg">
+					</section>
+
 					<!--
 						bit.ly/fe101
 
@@ -247,29 +268,59 @@
 
 				<section>
 					<section>
-						<h1>FrontEnd 103</h1>
+						<h2>CSS TOOLS</h2>
 					</section>
-					<!--
-						Service Workers
-						Web Assembly
-						ES2015
-					-->
+					<section data-background-image="./images/graph/css.png">
+					</section>
 				</section>
 
 				<section>
 					<section>
-						<h2>Tips</h2>
+						<img src="./images/graph/bob.jpg" alt="" />
 					</section>
 					<section>
-						<h2>Humildah y Shispeza</h2>
-						<h2>Meetups</h2>
+						<h2>Herramientas para construir</h2>
+					</section>
+					<section data-background-image="./images/graph/build.png">
+					</section>
+				</section>
+
+
+				<section>
+					<section>
+						<h2>Frameworks de JavaScript</h2>
+					</section>
+					<section data-background-image="./gifs/no.gif">
+					</section>
+					<section data-background-image="./images/graph/js.png">
+					</section>
+					<section>
+						<h3>Relevant XKCD</h3>
+						<img src="./images/standards.png" alt="" />
+					</section>
+				</section>
+
+
+				<section>
+					<section>
+						<h1>FrontEnd 103?</h1>
+					</section>
+					<section>
+						<img src="./images/graph/next.png" alt="" />
+					</section>
+					<section>
+						<p> Ser un n00b	</p>
+						<img src="./gifs/n00b.gif" alt="" />
+					</section>
+					<section>
+						<p> Meetups!	</p>
 					</section>
 				</section>
 
 				<section>
 					<h3>@fforres</h3>
 					<h3>http://fforr.es</h3>
-					<h3><small>Stickers de Noders</small></h3>
+					<h3><small>Stickers de <a href="www.noders.com">Noders</a></small></h3>
 				</section>
 			</div>
 		</div>
