--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
 						</h2>
 						<aside class="notes">
 							A mi me encanta el FrontEnd - Jquery, Hasta React.
-							Siento que con todo lo que hemos realizado con Noders y NodeSchool y ETC.
+							Y que con todo lo que hemos realizado con Noders y NodeSchool y JavaScript Chile.
 						</aside>
 					</section>
 					<section data-background-image="./images/vader.jpg">
 						<h2>
 							Aprender Front End es terrible
 						</h2>
-						<span>(No tanto como vader)</span>
+						<span class="fragment">(No tanto como Vader)</span>
 					</section>
 
 					<section>
@@ -256,14 +256,6 @@
 					<section
 						data-background-image="./images/tool.jpg">
 					</section>
-
-					<!--
-						bit.ly/fe101
-
-						-	lo del framework .... meh :)
-							Testing
-						- packaging
-					-->
 				</section>
 
 				<section>
@@ -308,12 +300,18 @@
 					<section>
 						<img src="./images/graph/next.png" alt="" />
 					</section>
+					<section data-background-image="./images/hey_doc.jpg">
+					</section>
+
 					<section>
 						<p> Ser un n00b	</p>
 						<img src="./gifs/n00b.gif" alt="" />
 					</section>
 					<section>
-						<p> Meetups!	</p>
+						<img src="./gifs/thank_you.gif" alt="" class="fragment"/>
+					</section>
+					<section>
+						<p> Meetups! </p>
 					</section>
 				</section>
 
