--- a/index.html
+++ b/index.html
@@ -252,6 +252,9 @@
 					</section>
 					<section>
 						<iframe src="https://coggle.it/diagram/V3TQxZ9U2BFq7c9L" style="width:100vw; height: 83vh"></iframe>
+						<aside class="notes">
+
+						</aside>
 					</section>
 					<section
 						data-background-image="./images/tool.jpg">
@@ -301,17 +304,30 @@
 						<img src="./images/graph/next.png" alt="" />
 					</section>
 					<section data-background-image="./images/hey_doc.jpg">
+						<aside class="notes">
+							Progessive apps
+							Universal Javascript
+							Post processors
+						</aside>
 					</section>
 
 					<section>
-						<p> Ser un n00b	</p>
+						<h3> Ser un n00b	</h3>
 						<img src="./gifs/n00b.gif" alt="" />
 					</section>
 					<section>
-						<img src="./gifs/thank_you.gif" alt="" class="fragment"/>
+						<h3> Meetups! </h3>
+					</section>
+					<section data-background-image="./images/meetup.jpg">
+						<aside class="notes">
+							Organicen unn meetups
+							Presenten en meetup
+							Si quieren aprender de una tecnología, conversen con oldschools
+
+						</aside>
 					</section>
 					<section>
-						<p> Meetups! </p>
+						<img src="./gifs/thank_you.gif" alt="" class="fragment"/>
 					</section>
 				</section>
 
