--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 				<section>
 					<h3>@fforres</h3>
 					<h3>http://fforr.es</h3>
-					<h3><small>Stickers de <a href="www.noders.com">Noders</a></small></h3>
+					<h3><small>Stickers de <a href="http://www.noders.com">Noders</a></small></h3>
 				</section>
 			</div>
 		</div>
